    subarchitectures in standard-udebs.

  [ Joey Hess ]
  * Work around binutils breakage (#623710) that broke mklibs,
    by using mklibs-copy.
    Of course this means larger images, and should be reverted ASAP.
  * Revert use of mklibs-copy, as breakage seems fixed (tested on i386 and
    amd64). Closes: #624144

  [ Aurelien Jarno ]
  * Add virtio udebs on s390/generic and s390/netboot.

 -- Jurij Smakov <jurij@debian.org>  Mon, 24 Jan 2011 21:27:36 +0000

debian-installer (20110106) unstable; urgency=low

  * Use SpaceFun theme. Closes #603554.
  * Update Linux kernel to 2.6.32-29.

 -- Otavio Salvador <otavio@debian.org>  Thu, 06 Jan 2011 09:37:41 -0200

debian-installer (20101127) unstable; urgency=low

  [ Christian Perrier ]
  * Add pata-modules to powerpc builds to properly support
    YDL Powerstation. Thanks to Milan Kupcevic. Closes: #603893
  * Add ttf-lao-udeb to graphical installer to properly support the Lao
    language

 -- Otavio Salvador <otavio@debian.org>  Sat, 27 Nov 2010 15:18:28 -0200

debian-installer (20101121) unstable; urgency=low

  [ Otavio Salvador ]
  * Enable localudebs usage again since #600852 has been fixed.
  * Add VCS-Browser field to debian.control. Closes: #601908

  [ Martin Michlmayr ]
  * LS Pro: /boot can be ext3 too.  Thanks Ryan Tandy.

  [ Otavio Salvador ]
  * Update Linux kernel udebs for 2.6.32-27.
  * sparc/sparc64: put input-modules into initrd. Closes: #602740

  [ Colin Watson ]
  * geniso_hybrid_plus_firmware_partition: Cope if the disk size exceeds
    32MB.  (The previous code seems to have misunderstood isohybrid's
    defaults slightly, but we now just specify the full CHS geometry
    explicitly in case anything changes in the future.)

  [ Christian Perrier ]
  * Add ttf-sinhala-lklug-udeb to graphical installer to properly
    support the Sinhala language

  [ Otavio Salvador ]
  * Document SPLASH_PNG variable for build configuration.
