@@ -1,4 +1,4 @@
-MEDIUM_SUPPORTED = cdrom netboot
+MEDIUM_SUPPORTED = cdrom netboot netboot-gtk
 MEDIUM_SUPPORTED_EXTRA = monolithic
 
 # The version of the kernel to use.
