@@ -6,3 +6,8 @@ EXTRANAME = $(MEDIUM)/
 MANIFEST-KERNEL = "kernel for use with mkisofs to build a CD"
 MANIFEST-INITRD = "initrd for use with mkisofs to build a CD"
 MANIFEST-DEBIAN_CD_INFO = "mkisofs config files for CD"
+
+# Add the gtk images.
+INITRD_GTK = dest/cdrom/gtk/initrd.gz
+
+EXTRATARGETS = build_cdrom_gtk
