@@ -65,7 +65,10 @@ debian-installer (2011xxxx) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Add virtio udebs on s390/generic and s390/netboot.
 
- -- Jurij Smakov <jurij@debian.org>  Mon, 24 Jan 2011 21:27:36 +0000
+  [ Robert Millan ]
+  * Enable netboot-gtk flavor on kfreebsd-amd64. Closes: #596596
+
+ -- Robert Millan <rmh@debian.org>  Tue, 14 Jun 2011 18:26:02 +0200
 
 debian-installer (20110106) unstable; urgency=low
 
